--- a/css/style.css
+++ b/css/style.css
@@ -6,11 +6,18 @@ html {
 }
 
 body {
-  font-family: "Avenir Next", "Hiragino Kaku Gothic ProN W3", sans-serif;
+  font-family: 'Noto Sans TC', sans-serif;
 }
 
 a {
   text-decoration: none;
+}
+
+h2 {
+  font-family: 'Noto Sans TC', sans-serif;
+  font-size: 24px;
+  color: rgb(0, 0, 0);
+  margin-left: 20px;
 }
 
 /* header */
@@ -61,12 +68,46 @@ header {
 
 
 /* mainここから */
-main {
-  height: 800px;
+
+.top-image {
+  position: relative;
+}
+
+.top-image img{
+  width: 100%;
+  height: 500px;
+  opacity: 0.7;
+}
+
+.top-text{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -ms-transform: translate(-50%,-50%);
+  -webkit-transform: translate(-50%,-50%);
+  transform: translate(-50%,-50%);
+  margin:0;
+  padding: 30px 100px;
+  background: rgba(217, 227, 231, 0.568);
+  
+}
+
+.top-text h1{
+  font-size: 3em;
+  color: rgb(255, 255, 255);
+  text-align: center;
+  font-family: 'Chakra Petch', sans-serif;
+}
+
+.top-text p{
+  font-size: 2em;
+  color: rgb(255, 255, 255);
+  font-family: 'Chakra Petch', sans-serif;
 }
 
 
-/* fooderここから */
+/* footerここから */
+
 footer{
   width: 100%;
   height: 100px;
